fix css word-wrap

--- a/webui/l5s/css/main.css
+++ b/webui/l5s/css/main.css
@@ -5,6 +5,8 @@ body {
   font-weight: 400;
   padding-top: 50px;
   background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.03);
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 /** l5s-header **/
